# eeg-awesome-3D

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
docs/: recordings.md
eegvis/: __init__.py  channel_map.py  cli.py  config.py  models.py
eegvis/assets/: __init__.py  channel_map.example.yaml  default_config.yaml  electrodes_cgx.py
eegvis/lsl/: __init__.py  discovery.py  player.py  receiver.py  synthetic.py
eegvis/processing/: __init__.py  aperiodic.py  asymmetry.py  band_envelope.py  band_power.py  band_select.py  base.py  fft.py  filters.py  hjorth.py  line_length.py  normalization.py  pipeline.py  region_power.py  regions.py  registry.py  short_fourier.py  smoothing.py  spectral_entropy.py
eegvis/recordings/: __init__.py  download.py  edf.py  mapping.py
eegvis/server/: __init__.py  app.py  engine.py  static.py  websocket.py
scripts/: gen_1010_positions.py
tests/: conftest.py  test_band_select.py  test_channel_map.py  test_features.py  test_filters.py  test_lsl_discovery.py  test_processors.py  test_protocol.py  test_recordings.py  test_regions.py  test_server.py  test_synthetic_stream.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/models/: brain.glb
web/src/: app.ts  main.ts
web/src/controls/: gui.ts  keyboard.ts
web/src/net/: protocol.ts  websocket.ts
web/src/scene/: bandTexture.ts  brainHead.ts  colormap.ts  createScene.ts  displayPanel.ts  eegTraceTexture.ts  electrodes.ts  presets.ts  resampler.ts  runningStats.ts
