[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eegvis"
version = "0.1.0"
description = "Realtime EEG processing backend + browser 3D visualisation (LSL in Python, Three.js in the browser)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
lsl = ["pylsl>=1.16"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
eegvis = "eegvis.cli:app"

[tool.setuptools.packages.find]
include = ["eegvis*"]

[tool.setuptools.package-data]
"eegvis.assets" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
